August 2011 3.5.0
  - New module "General information": shows internal data about accounts (e.g. creation time)
  - inetOrgPerson: New attributes o, employeeNumber, initials
  - LAM Pro:
   -> Automount: allow to create automount maps
   -> Password policy: allow to (un)lock accounts

2011-04-25 3.4.0
  - IMAP mailboxes:
   -> support to read user name from uid attribute
   -> added quota management
  - Personal: added additional options for account profiles
  - Mail aliases: sort receipients (RFE 3170336)
  - Asterisk: support all attributes (can be disabled in configuration)
  - Samba 3/Shadow: allow to sync expiration date (RFE 3147751)
  - LAM Pro:
   -> support automount entries
   -> Zarafa groups: allow combination with group of names
   -> enhanced wildcards for custom scripts
   -> Group of (unique) names: allow members to be optional
  - Fixed bugs:
   -> Renaming of default profile (3183920)
   -> Profile editor: fixed problems with multi select


12.02.2011 3.3.0
  - additional usability enhancements
  - new IMAP module ("Mailbox (imapAccess)") allows to create/delete user mailboxes
  - LAM Pro: enhanced Zarafa to support users and groups for "Send as" (new configuration option)
  - PDF export: higher resolution for logos
  - reduced number of LDAP queries
  - lamdaemon: support journaled quotas
  - fixed bugs:
   -> ignore comment lines in shells file (3107124)
   -> home directory creation on file upload
  

28.10.2010 3.2.0
  - large usability enhancements
  - Shadow: allow to force password change when maximum password age is set
  - DHCP: renamed module "Fixed IPs" to "Hosts", IP is now optional (3038797)
  - PHP version 5.2.4 or higher required
  - LAM Pro:
   -> Zarafa support (user, group, server)
   -> Password policy: allow to force password change (RFE 3026940)
   -> Password reset page: mail subject, text and from address can be set in server profile
   -> Self service: Asterisk (voicemail) password synchronisation
  - Fixed bugs: